--- a/A14 Ex03 AlexanderVainshtein 312717218 DanielShmuglin 305870636/FacebookWinApp/FacebookWinApp.csproj
+++ b/A14 Ex03 AlexanderVainshtein 312717218 DanielShmuglin 305870636/FacebookWinApp/FacebookWinApp.csproj
@@ -36,11 +36,11 @@
   <ItemGroup>
     <Reference Include="Facebook, Version=6.0.10.0, Culture=neutral, PublicKeyToken=58cb4f2111d1e6de, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Facebook.dll</HintPath>
+      <HintPath>..\..\Refs\Facebook.dll</HintPath>
     </Reference>
     <Reference Include="FbGraphApiWrapper, Version=6.2.1.5, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\FbGraphApiWrapper.dll</HintPath>
+      <HintPath>..\..\Refs\FbGraphApiWrapper.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic.PowerPacks.Vs, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
